EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==06/26/2009==
Trevius: SoF - Tradeskill containers within a character inventory can now combine recipes.
Trevius: SoF - Items with Recast Delays no longer appear as greyed out.

==06/25/2009==
Trevius: Structure work for Player Profile Recast Timers and Illusions in 6.2 Client.

==06/24/2009==
Trevius: #wc (wearchange) as well as all of the facial feature commands will now retain armor tint when used.
Trevius: Using #wc now makes temporary changes visible by all clients.
Trevius: Decimals can now be used with the #size command instead of it only accepting whole numbers.
Trevius: Size is now identified in the illusion struct for SoF and Titanium.
KLS: Implemented quiver haste.
KLS: Change to ranger stationary archery bonus. (Re: Nerfed)
KLS: Adjusted high level ranger archery hate.
KLS: Fix for mana reduction focus effect checking base instead of base2
KLS: Fix for hybrids not getting mana reduction effects.

Optional SQL: /utils/sql/svn/710_tint_set_naming.sql

==06/23/2009==
KLS: /surname changes
KLS: Implemented OP_ClearSurname
KLS: (gaeorn) Several 64-bit compile and runtime fixes
KLS: (gaeorn) NPC wander back rules.
Trevius: #texture will now allow player races to retain armor tint for both PCs and NPCs.
realityincarnate: bug fix for changing max_hp with the modifynpcstat command 

Required SQL: /utils/sql/svn/704_rules.sql

==06/22/2009==
Trevius: (Rabayn) When creating recipes, it is no longer required that componentcount be on separate rows from the successcount or failcount row.
Trevius: (takatok) AA Shield Block added.
Trevius: (Shendare) Armor Tint on NPCs can now be set on a per-slot basis.
cavedude: Added rules to disable/change #peqzone debuffs. Cleaned up code regarding it some.
Derision: Fixed the BestZ stuff I broke in Rev686
WildcardX: More work migrating EQBOTS code into BOTS.

Required SQL: /utils/sql/svn/702_aashieldblock_tint_table.sql